--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,8 +8,8 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-6">
-            <table class="table table-dark .table-sm">
+        <div class="col-sm-4">
+            <table class="table table-dark .table-sm ">
                 <thead>
                 <tr>
                     <th>Date</th>
@@ -30,6 +30,11 @@
             </tbody>
                 </thead>
             </table>
+
+
+
+
+<!--            // navigation bar-->
             <nav aria-label="Page navigation example">
                 <ul class="pagination" >
                     <li class="page-item" th:classappend="${page_start == 1} ? 'disabled'"><a class="page-link"  th:href="@{'/page/' + ${page_start - 5}}">Previous</a></li>
@@ -41,16 +46,18 @@
                     <li class="page-item" th:classappend="${page_start+5>totalPages}? 'disabled'"><a class="page-link"  th:href="@{'/page/' + ${page_start+5}}">Next</a></li>
                 </ul>
             </nav>
+            <!--            // navigation bar end -->
         </div>
-        <div class="col-md-6" id="timeList">
+        <div class="col-sm-8" id="timeList">
 
-            <table class="table table-dark .table-sm" th:id="timeList">
+            <table class="table table-dark .table-striped table-bordered" th:id="timeList">
                 <thead>
                 <tr>
                     <th>hour</th>
-                    <th>what have you done today </th>
-                    <th>how focused were you</th>
-                    <th>Action</th>
+                    <th> Task Assigned</th>
+                    <th> status & progress</th>
+                    <th> Focus Level</th>
+                    <th>update</th>
                 </tr>
                 <tbody>
                 </tbody>
